@startuml DashboardGuru-ClassDiagram

skinparam classAttributeIconSize 0
skinparam linetype ortho

' Core Models
class User {
  +id: bigint
  +name: string
  +email: string
  +password: string
  +email_verified_at: timestamp
  +remember_token: string
  --
  +serials()
}

class Product {
  +id: bigint
  +name: string
  +description: text
  --
  +serials()
}

class Serial {
  +id: bigint
  +user_id: bigint
  +product_id: bigint
  +serial: string
  +paket: string
  +active: boolean
  +expired_at: datetime
  --
  +user()
  +product()
  +classrooms()
  +students()
}

class Classroom {
  +id: bigint
  +serial_id: bigint
  +name: string
  +grade: string
  +code: string
  --
  +serial()
  +students()
  +lessons()
  +exercises()
}

class Student {
  +id: bigint
  +serial_id: bigint
  +user_id: bigint
  +classroom_id: bigint
  +name: string
  +username: string
  +password: string
  +password_text: string
  +nis: string
  +email: string
  +phone: string
  --
  +serial()
  +classroom()
  +user()
  +tasks()
  +exercisePoints()
}

' Content Models
class Mapel {
  +id: bigint
  +name: string
  --
  +lessons()
  +competences()
  +posts()
}

class Lesson {
  +id: bigint
  +mapel_id: bigint
  +name: string
  +description: text
  +questions: text
  +file: string
  +grade: string
  +semester: string
  +category: int
  +deadline: datetime
  --
  +mapel()
  +themes()
  +classrooms()
}

class Exercise {
  +id: bigint
  +lesson_id: bigint
  +serial_id: bigint
  +exercise_type_id: bigint
  +title: string
  +description: text
  +is_admin: boolean
  +shared_to_classes: json
  --
  +lesson()
  +serial()
  +exerciseType()
  +exerciseItems()
  +classrooms()
}

class ExerciseType {
  +id: bigint
  +name: string
  +code: string
  --
  +exercises()
}

class ExerciseItem {
  +id: bigint
  +exercise_id: bigint
  +exercise_model_id: bigint
  +question: text
  +options: json
  +answer: text
  +point: varchar(3)
  --
  +exercise()
  +exerciseModel()
}

class ExerciseModel {
  +id: bigint
  +name: string
  +code: string
  --
  +exerciseItems()
}

class Post {
  +id: bigint
  +serial_id: bigint
  +user_id: bigint
  +mapel_id: bigint
  +title: string
  +description: text
  +slug: string
  +link: string
  +attachment: string
  +embed: string
  +category: json
  +shared_to_classes: json
  +deadline: datetime
  +is_task: boolean
  --
  +serial()
  +user()
  +mapel()
  +tasks()
}

' Grading Models
class Task {
  +id: bigint
  +serial_id: bigint
  +post_id: bigint
  +student_id: bigint
  +description: text
  +attachment: string
  +point: varchar(3)
  --
  +serial()
  +post()
  +student()
}

class ExercisePoint {
  +id: bigint
  +serial_id: bigint
  +exercise_id: bigint
  +student_id: bigint
  +answer: text
  +competence_point: varchar(3)
  +exercise_point: varchar(3)
  --
  +serial()
  +exercise()
  +student()
}

class Competence {
  +id: bigint
  +mapel_id: bigint
  +code: string
  +name: string
  --
  +mapel()
}

' Pivot Tables
class LessonClassroom <<pivot>> {
  +id: bigint
  +lesson_id: bigint
  +classroom_id: bigint
  +created_at: timestamp
}

class ExerciseClassroom <<pivot>> {
  +id: bigint
  +exercise_id: bigint
  +classroom_id: bigint
  +created_at: timestamp
}

class OnlineMeeting {
  +id: bigint
  +serial_id: bigint
  +title: string
  +room_name: string
  +scheduled_at: datetime
  +duration: int
  --
  +serial()
}

' Relationships - User & Auth
User "1" -- "0..*" Serial : owns >
Product "1" -- "0..*" Serial : has >
Serial "1" -- "0..*" Classroom : contains >
Serial "1" -- "0..*" Student : has >
Classroom "1" -- "0..*" Student : contains >
User "1" -- "0..*" Student : created_by >

' Relationships - Content
Mapel "1" -- "0..*" Lesson : categorizes >
Mapel "1" -- "0..*" Post : categorizes >
Mapel "1" -- "0..*" Competence : has >
Serial "1" -- "0..*" Post : belongs_to >
User "1" -- "0..*" Post : creates >

' Relationships - Exercises
Lesson "1" -- "0..*" Exercise : contains >
Serial "1" -- "0..*" Exercise : belongs_to >
ExerciseType "1" -- "0..*" Exercise : categorizes >
Exercise "1" -- "0..*" ExerciseItem : contains >
ExerciseModel "1" -- "0..*" ExerciseItem : defines_format >

' Relationships - Grading
Post "1" -- "0..*" Task : has_submissions >
Student "1" -- "0..*" Task : submits >
Student "1" -- "0..*" ExercisePoint : has_scores >
Exercise "1" -- "0..*" ExercisePoint : has_scores >

' Pivot Relationships
Lesson "0..*" -- "0..*" Classroom : (LessonClassroom) shared_to
Exercise "0..*" -- "0..*" Classroom : (ExerciseClassroom) shared_to

' Online Meeting
Serial "1" -- "0..*" OnlineMeeting : has >

@enduml
